# shadow-garden

./: CMakeLists.txt  README.md  submission-action.md  submission-lights-camera.md
resources/shaders/: default.frag  default.vert  simple_depth.frag  texture.frag  texture.vert
scenefiles/custom/: tree.json
src/: camera.cpp  fbo.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cylinder.cpp  Cylinder.h  Sphere.cpp
src/utils/: imagereader.cpp  imagereader.h  sceneparser.cpp  sceneparser.h
